--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <html>
 <head>
-
 </head>
 <body>
 
-<h1>O Davi</h1>
-<h2>Fatos</h2>
-<p>Isso aqui é um fato</p>
+<h1>COMO SER UMA BOA ALUNA NA ESCOLA</h1>
+
+
+
+<p>Como mudar e não ser mais uma aluna com notas ruins.:</p>
+
 
 <ol>
-    <li>Davi;</li>
-    <li>melhor;</li>
-    <li>para;</li>
-    <li>sempre;</li>
+    <li>Começe aos poucos, não vá de uma vez porque isso vai mudar total a sua rotina ;</li>
+    <li>Crie uma rotina boa,que você se dê bem com ela ;</li>
+    <li>
+
+
+
+
+
 
 </ol>
 
-<a href="https://www.google.com">Clique aqui</a>
+
+<a href="https://br.pinterest.com/cah_studie/rotina-escolar-para-quem-estuda-de-tarde/">Clique aqui</a>
 
 </body>
-
-
 </html>
